Fix review comments: docker applyTo globs, spring official URL, java preview API note